src/test/errors/duplicate_class.j
class Main {

Void main(Int i, Int a, Int b,Int d){

    while(true){

        b = 340 ;

        t1 = t2 ;
    }
}
}


class Dummy {

}

class Dummy {

}
class Dummy {
    Int x;
    String y;
}